--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation 'com.github.psambit9791:jdsp:2.0.1'
+    implementation 'org.jfree:jfreechart:1.5.3'
     implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:1.9.0' // for JVM platform
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
